ansible/roles/grafana/templates/service-grafana.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  selector: 
    app: grafana-server
  type: ClusterIP 
  ports:
    - port: 8080
      targetPort: 3000
