ansible/roles/grafana/templates/route-grafana.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  namespace: monitoring
spec:
  host: grafana.cisroutes.dc1.example.com
  path: /
  to:
    kind: Service
    name: grafana-service
  port:
    targetPort: 8080
